pb/codeforce/379/a/compiling_error.txt
/Users/JJun/Dropbox/acm/pb/codeforce/379/a/solution.cpp:12:10: error: use of undeclared identifier 'id'
for(i=0; id)
         ^
/Users/JJun/Dropbox/acm/pb/codeforce/379/a/solution.cpp:13:14: warning: overloaded operator << has higher precedence than comparison operator [-Woverloaded-shift-op-parentheses]
cout<<"Anton"<a)
~~~~~~~~~~~~~^~
/Users/JJun/Dropbox/acm/pb/codeforce/379/a/solution.cpp:13:5: note: place parentheses around the '<<' expression to silence this warning
cout<<"Anton"<a)
    ^
(            )
/Users/JJun/Dropbox/acm/pb/codeforce/379/a/solution.cpp:13:14: note: place parentheses around comparison expression to evaluate it first
cout<<"Anton"<a)
             ^
      (        )
/Users/JJun/Dropbox/acm/pb/codeforce/379/a/solution.cpp:13:16: error: expected ';' after expression
cout<<"Anton"<a)
               ^
               ;
/Users/JJun/Dropbox/acm/pb/codeforce/379/a/solution.cpp:13:14: warning: relational comparison result unused [-Wunused-comparison]
cout<<"Anton"<a)
~~~~~~~~~~~~~^~
/Users/JJun/Dropbox/acm/pb/codeforce/379/a/solution.cpp:13:16: error: expected expression
cout<<"Anton"<a)
               ^
2 warnings and 3 errors generated.
